2026-02-24  Markus Gans  <guru.mail@muenster.de>
	* FAttribute has been reimplemented

2026-02-16  Markus Gans  <guru.mail@muenster.de>
	* FCellColor has been reimplemented

2026-02-08  Frank Dean  <frank@fdsd.co.uk>
	* Update autotools configuration to include all distribution files

2026-02-07  Markus Gans  <guru.mail@muenster.de>
	* Fix the termcap quirks to support OSC 4 on newer versions of tmux

2026-02-06  Markus Gans  <guru.mail@muenster.de>
	* Add additional subchapters to the documentation

2026-02-05  Markus Gans  <guru.mail@muenster.de>
	* Reduce pointer arithmetic and use safe iterators more often
	* Bugfix: Full-width characters will display correctly again. 
	  This was a defect since December 31
	* The configure script now supports compiling unit tests and examples 
	  in a single build when you use the --with-unit-test and 
	  --enable-compile-all arguments together

2026-02-03  Frank Dean  <frank@fdsd.co.uk>
	* Fix build failure when calling FListViewItem::setData

2026-01-20  Markus Gans  <guru.mail@muenster.de>
	* Convert the FUnicode data structure back to an array to avoid access 
	  problems on some architectures

2026-01-18  Markus Gans  <guru.mail@muenster.de>
	* Split the first steps document into several subchapters

2026-01-03  Markus Gans  <guru.mail@muenster.de>
	* Replace the FUnicode data structure from an std::array to a flatter 
	  struct

2025-12-31  Markus Gans  <guru.mail@muenster.de>
	* The "FindFinalCut.cmake" file has been added to simplify the 
	  integration of FINAL CUT into CMake projects
	* The unicode_to_utf8 function now returns the fixed-size 
	  struct UTF8_Char instead of an std::string object
	* Pointers to strings are used more frequently in string processing 
	  to avoid making unnecessary copies of strings

2025-11-23  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of FString::toLong() and FString::toULong()

2025-11-18  Markus Gans  <guru.mail@muenster.de>