@@ -769,10 +769,12 @@ inline auto FScrollView::getViewportCursorPos() -> FPoint
 //----------------------------------------------------------------------
 void FScrollView::init()
 {
+#ifndef NDEBUG
   const auto& parent = getParentWidget();
 
   assert ( parent != nullptr );
   assert ( ! parent->isInstanceOf("FScrollView") );
+#endif
 
   initScrollbar (vbar, Orientation::Vertical, &FScrollView::cb_vbarChange);
   initScrollbar (hbar, Orientation::Horizontal, &FScrollView::cb_hbarChange);
