@@ -1,3 +1,6 @@
+2026-02-25  Markus Gans  <guru.mail@muenster.de>
+	* FData class modernized
+
 2026-02-24  Markus Gans  <guru.mail@muenster.de>
 	* FAttribute has been reimplemented
 
